Fix some cases where a bidi-isolated element was never going through bidi resolution. Bug 731594, r=roc